app.css
* {
    box-sizing: border-box !important;
}

html {
    font-size: 16px;
    font-family: Inter;
    --filter-color-light-gray: invert(100%) sepia(1%) saturate(437%) hue-rotate(289deg) brightness(113%) contrast(78%);
    --filter-color-dark-gray: invert(95%) sepia(0%) saturate(1047%) hue-rotate(152deg) brightness(80%) contrast(82%);
    --filter-color-white: invert(100%) sepia(5%) saturate(141%) hue-rotate(77deg) brightness(120%) contrast(100%);
    --text-light-gray: #e3e3e3;
    --text-dark-gray: #b5b5b5;
    --text-light-gray-with-opacity: #b5b5b5ef;
    --color-translucent-gray: #ffffff14;
}

.filter-color-white {
    filter: var(--filter-color-white);
}
.bg-transparent {
    background-color: transparent;
}

html, body {
    padding: 0;
    margin: 0;
}

h2 {
    font-size: 14px;
}

body {
    background-color: #f1f1f1;
    font-size: 13px;
}

button {
    border: none;
}
button:hover {
    cursor: pointer;
}
button:focus {
    /* outline: none; */
}

header {
    display: flex;
    background-color: #1a1a1a;
    height: 3.5rem;
    line-height: 20px;
}

.inline-block {
    display: inline-block;
}

.flex {
    display: flex;
}

.flex-center {
    align-items: center;
    justify-content: center;
}
.items-start { align-items: start; }
.items-center { align-items: center; }
.self-start { align-self: start; }
.justify-center { justify-content: center; }
.justify-between { justify-content: space-between; }
.text-gray-300 { color: #303030; }

.btn {
    border-radius: 6px;
    padding: 6px 12px;
    font-size: 1em;
}
.btn:focus-visible {
    outline: 3px solid #005BD3;
    outline-offset: 0.125rem;
}
.btn-light {
    background-color: #fff;
}
.btn-light:hover {
    background-color: #f7f7f7;
}
.btn-light:active {
    box-shadow: inset 0 2px 1.5px #e2e2e2;
}
.btn-light:hover {
    background-color: #e2e2e2;
}

.m-0 { margin: 0; }
.m-1 { margin: 0.25rem; }
.m-2 { margin: 0.5rem; }
.m-3 { margin: 0.75rem; }
.m-4 { margin: 1rem; }

.mx-0 { margin-left: 0; margin-right: 0; }
.mx-1 { margin-left: 0.25rem; margin-right: 0.25rem; }
.mx-2 { margin-left: 0.5rem; margin-right: 0.5rem; }
.mx-3 { margin-left: 0.75rem; margin-right: 0.75rem; }
.mx-4 { margin-left: 1rem; margin-right: 1rem; }

.my-0 { margin-top: 0; margin-bottom: 0; }
.my-1 { margin-top: 0.25rem; margin-bottom: 0.25rem; }
.my-2 { margin-top: 0.5rem; margin-bottom: 0.5rem; }
.my-3 { margin-top: 0.75rem; margin-bottom: 0.75rem; }
.my-4 { margin-top: 1rem; margin-bottom: 1rem; }

.mt-0 { margin-top: 0; }
.mt-1 { margin-top: 0.25rem; }
.mt-2 { margin-top: 0.5rem; }
.mt-3 { margin-top: 0.75rem; }
.mt-4 { margin-top: 1rem; }

.mr-0 { margin-right: 0; }
.mr-1 { margin-right: 0.25rem; }
.mr-2 { margin-right: 0.5rem; }
.mr-3 { margin-right: 0.75rem; }
.mr-4 { margin-right: 1rem; }

.ml-0 { margin-left: 0; }
.ml-1 { margin-left: 0.25rem; }
.ml-2 { margin-left: 0.5rem; }
.ml-3 { margin-left: 0.75rem; }
.ml-4 { margin-left: 1rem; }

.p-0 { padding: 0; }
.p-1 { padding: 0.25rem; }
.p-2 { padding: 0.5rem; }
.p-3 { padding: 0.75rem; }
.p-4 { padding: 1rem; }

.px-0 { padding-left: 0; padding-right: 0; }
.px-1 { padding-left: 0.25rem; padding-right: 0.25rem; }
.px-2 { padding-left: 0.5rem; padding-right: 0.5rem; }
.px-3 { padding-left: 0.75rem; padding-right: 0.75rem; }
.px-4 { padding-left: 1rem; padding-right: 1rem; }

.py-0 { padding-top: 0; padding-bottom: 0; }
.py-1 { padding-top: 0.25rem; padding-bottom: 0.25rem; }
.py-2 { padding-top: 0.5rem; padding-bottom: 0.5rem; }
.py-3 { padding-top: 0.75rem; padding-bottom: 0.75rem; }
.py-4 { padding-top: 1rem; padding-bottom: 1rem; }

.header__logo-container,
.header__search-bar-container,
.header__user-profile-container {
    display: flex;
    align-items: center;
}

/* Header sections sizes and alignment */
/* Mobile */
    .header__logo-container {
        width: 15%;
        padding: 0 12px;
    }
    .header__search-bar-container {
        width: 60%;
    }
    .header__user-profile-container {
        width: 25%;
        justify-content: space-around;
    }
/* End Mobile */
@media screen and (min-width: 480px) { /* Desktop */
    header > [class^=header__] {
        width: 33%;
    }
    .header__logo-container {
        justify-content: start;
    }
}

.header__logo-small {
    
}
.header__logo-large {
    display: none;
}
@media screen and (min-width: 480px) {
    .header__logo-small {
        display: none;
    }
    .header__logo-large {
        display: block;
    }
}

.header__search-bar-container {
    justify-content: center;
    position: relative;
    --icon-size: 1em;
    --padding: 8px;
}
.header__search-input-wrapper {
    width: 100%;
    height: 2rem;
}
.header__search-bar-container .search-icon {
    width: var(--icon-size);
    height: var(--icon-size);
    position: absolute;
    left: 1em;
    top: 50%;
    transform: translateY(-50%);
    z-index: 1;
    filter: var(--filter-color-light-gray);
}
.header__search-input {
    /* all: initial; */
    font-size: inherit;
    width: 100%;
    height: 100%;
    padding: 8px;
    padding-left: calc(var(--icon-size) * 2 + var(--padding));
    border: none;
    box-shadow: inset 0 0 0 1px #636363;
    border-radius: 0.5rem;
    background-color: #303030;
    color: var(--text-light-gray);
    transition: 0.15s;
}
.header__search-input::placeholder {
    color: var(--text-light-gray-with-opacity);
    font-weight: 300;
}
.header__search-input:hover {
    box-shadow: inset 0 0 0 1px #ccc;
}
.header__search-input:focus {
    outline: none;
    box-shadow: inset 0 0 0 2px #e1e1e1;
}

@media screen and (min-width: 480px) {
    .header__user-profile-container {
        justify-content: end;
        gap: 10px;
        padding: 0 10px;
    }
}

@media screen and (min-width: 480px) {
    .header__shop-badge,
    .header__bell-icon-wrapper {
        height: 2rem;
        display: flex;
        align-items: center;
        border-radius: 8px;
    }
    .header__shop-badge {
        padding: 2px;
    }
}

@media screen and (min-width: 480px) {
    .header__bell-icon-wrapper {
        width: 2rem;
        display: flex;
        justify-content: center;
        align-items: center;
        padding: 10px;
    }
    .header__bell-icon-wrapper,
    .header__shop-badge {
        background-color: var(--color-translucent-gray);
        transition: background-color 0.15s;
    }
    .header__bell-icon-wrapper:hover,
    .header__shop-badge:hover {
        background-color: #4a4a4a;
    }
}
.header__bell-icon {
    filter: var(--filter-color-light-gray);
}

.header__shop-badge {
    background-color: var(--color-translucent-gray);
    color: var(--text-light-gray);
}
.header__shop-name {
    display: none;
}
@media screen and (min-width: 480px) {
    .header__shop-name {
        display: initial;
        padding: 5px;
    }
}
.header__shop-icon {
    border-radius: 8px;
    padding: 5px;
    background-color: #36FBA1;
    color: #000000AA;
    height: 100%;
}

main {
    margin: 5rem auto;
    max-width: 49.75rem;
}

.alert {
    background-color: #1a1a1a;
    color: var(--text-light-gray);
    border-radius: 0.5rem;
    padding: 0.75rem 1rem;
    display: flex;
    justify-content: space-between;
    gap: 1rem;
}

.alert__content {
    display: flex;
    justify-content: space-between;
    flex: 1;
}

.alert__close {
    width: 20px;
}

.setup-guide {
    border: 1px solid #dbdbdb;
    border-radius: 0.5rem;
    padding: 0.5rem;
    background-color: #fff;
}

.setup-guide__header {

}

.setup-guide__collapse-icon {
    --size: 2em;
    width: var(--size);
    height: var(--size);
}
.setup-guide__collapse-icon:hover {
    background: #0000000d;
}

.progress-bar-track {
    background-color: #e3e3e3;
    width: 72px;
    height: 4px;
    border-radius: 5px;
    overflow: hidden;
}
.progress-bar-slider {
    background-color: #303030;
    min-width: 4px;
    width: 0;
    height: 100%;
    transition: width 0.25s;
}

